# OmniDSP

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Config.cmake.in  LICENSE-COMMERCIAL  MANIFEST.in  Makefile  README.md  TODO.md  build.bat  build.sh  check_env.py  conda-lock.yml  deny.toml  environment-dev.yml  environment.yml  my_changes.diff  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: CMakeLists.txt  fft.cpp  main.cpp  rfft.cpp  windows.cpp
examples/cpp/: CMakeLists.txt  cqt.cpp  fft.cpp  rfft.cpp  window.cpp
highway-sys/: Cargo.toml  build.rs  compile_flags.txt
highway-sys/shim/: omnidsp_hwy.cpp
highway-sys/src/: lib.rs
omnidsp/: Cargo.toml
omnidsp-conformance/: Cargo.toml
omnidsp-conformance/src/: lib.rs  modules.rs  primitives.rs  support.rs
omnidsp-core/: Cargo.toml
omnidsp-core/benches/: cqt.rs
omnidsp-core/src/: create.rs  dispatch.rs  error.rs  hermitian.rs  lib.rs  spec.rs  test_utils.rs  types.rs  window.rs
omnidsp-core/src/design/: conv.rs  cqt.rs  dft.rs  fir.rs  iir.rs  mod.rs  remez.rs  resample.rs  window.rs
omnidsp-core/src/modules/: conv.rs  cqt.rs  dct.rs  fir.rs  hilbert.rs  iir.rs  mod.rs  resample.rs  window.rs  xcorr.rs
omnidsp-core/src/modules/cqt/: batch.rs  kernel.rs  mod.rs  stream.rs
omnidsp-core/src/scalar/: iir.rs  mod.rs  vecops.rs
omnidsp-core/src/traits/: conv.rs  dct.rs  dft.rs  fir.rs  iir.rs  mod.rs  reconfigure.rs  vecops.rs  window.rs
omnidsp-core/testdata/: cqt_librosa.rs  cqt_numpy.rs  cqt_process_numpy.rs  dct_scipy.rs  fir_lfilter_scipy.rs  fir_scipy.rs  hilbert_scipy.rs  iir_scipy.rs  iir_sosfilt_scipy.rs  resample_poly_scipy.rs  resample_scipy.rs  xcorr_scipy.rs
omnidsp-core/tests/: integration.rs
omnidsp-ipp/: Cargo.toml
omnidsp-ipp-sys/: Cargo.toml  build.rs
omnidsp-ipp-sys/src/: conv.rs  fft.rs  iir.rs  lib.rs  vecops.rs
omnidsp-ipp/src/: conv.rs  dft.rs  ffi.rs  iir.rs  lib.rs  vecops.rs
omnidsp-ipp/tests/: conformance.rs
omnidsp-macros/: Cargo.toml
omnidsp-macros/src/: lib.rs
omnidsp-onemkl/: Cargo.toml
omnidsp-onemkl/benches/: dft.rs  vecops.rs  vml_mode.rs
omnidsp-onemkl/src/: conv.rs  dft.rs  ffi.rs  lib.rs  vecops.rs  xcorr.rs
omnidsp-onemkl/tests/: conformance.rs  oracle.rs  vs_oracle.rs
omnidsp-rust/: Cargo.toml
omnidsp-rust/src/: dft.rs  iir.rs  lib.rs  vecops.rs
omnidsp-testdata/: Cargo.toml
omnidsp-testdata/src/: cqt_librosa.rs  cqt_numpy.rs  cqt_process_numpy.rs  dct_scipy.rs  fir_lfilter_scipy.rs  fir_scipy.rs  hilbert_scipy.rs  iir_scipy.rs  iir_sosfilt_scipy.rs  lib.rs  remez_scipy.rs  resample_poly_scipy.rs  resample_scipy.rs  xcorr_scipy.rs
omnidsp-wasm/: .gitignore  Cargo.toml  README.md
omnidsp-wasm/src/: lib.rs
omnidsp/src/: backend.rs  config.rs  create.rs  create_plan.rs  generic.rs  lib.rs  macros.rs  omnidsp.rs  resolve.rs
omnidsp/src/dispatch/: dft.rs  iir.rs  mod.rs  vecops.rs
omnidsp/tests/: conformance.rs  integration.rs
python/: CMakeLists.txt  bindings.cpp
src/omnidsp/: CMakeLists.txt  convolution.cpp  cqt.cpp  fft.cpp  omnidsp.cpp  resample.cpp  window.cpp
src/omnidsp/accelerate/: CMakeLists.txt  backend.cpp  backend.h  backend.hpp  convolution.cpp  fft.cpp  fft.hpp  resample.cpp  window.cpp
src/omnidsp/backend/: CMakeLists.txt  accelerate.cpp  backend.cpp  backend.h  backend_impl.h  onemkl.cpp  stub.cpp
src/omnidsp/backend/accelerate/: CMakeLists.txt  backend.cpp  backend.h  backend.hpp  convolution.cpp  fft.cpp  resample.cpp  window.cpp
src/omnidsp/backend/default/: backend.cpp  backend.h  backend.hpp  convolution.cpp  convolution.hpp  cqt.cpp  cqt.hpp  fft.cpp  fft.hpp  filter.cpp  fir_filter.hpp  iir_filter.cpp  iir_filter.hpp  resample.cpp  resample.hpp  window.cpp
src/omnidsp/backend/dispatcher/: CMakeLists.txt  backend.cpp  (+1 more)
src/omnidsp/default/: CMakeLists.txt  backend.cpp  backend.hpp  convolution.cpp  convolution.hpp  cqt.cpp  cqt.hpp  fft.cpp  fft.hpp  filter.cpp  filter.hpp  fir_filter.cpp  fir_filter.hpp  iir_filter.cpp  iir_filter.hpp  resample.cpp  resample.hpp  window.cpp  window.hpp
src/omnidsp/design/: cqt.cpp  fir_filter.cpp  iir_filter.cpp  resample.cpp
src/omnidsp/detail/: hwy_utils.hpp
src/omnidsp/dispatcher/: backend.cpp  backend.hpp
src/omnidsp/intelipp/: CMakeLists.txt  FindIPP.cmake  backend.cpp  backend.hpp  details.cpp  details.hpp  fft.cpp  fft.hpp  filter.cpp  filter.hpp  fir_filter.cpp  fir_filter.hpp  iir_filter.cpp  iir_filter.hpp  resample.cpp  resample.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/omnidsp/interface/: backend.h  backend.hpp  convolution.cpp  cqt.cpp  fft.cpp  filter.cpp  fir_filter.cpp  iir_filter.cpp  resample.cpp
src/omnidsp/onemkl/: CMakeLists.txt  backend.cpp  backend.h  backend.hpp  convolution.cpp  convolution.hpp  fft.cpp  fft.hpp  filter.cpp  filter.hpp  resample.cpp  resample.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/omnidsp/params/: convolution.cpp  cqt.cpp  fft.cpp  fir_filter.cpp  iir_filter.cpp  resample.cpp
src/omnidsp/specs/: transform.cpp  window.cpp
src/omnidsp/utils/: cqt_design.cpp  cqt_design.hpp  filter_design.cpp  filter_design.hpp  hwy.hpp  iir_filter_design.cpp  iir_filter_design.hpp  resample.cpp  resample.hpp  resample_design.cpp  resample_design.hpp
src/omnidsp_py/: CMakeLists.txt  __init__.py  api.py  bindings.cpp  omnidsp_py.pyi
tests/: CMakeLists.txt  cqt.cpp  fft.cpp  ifft.cpp  integration_test.rs  irfft.cpp  rfft.cpp  window.cpp  windows.cpp
tests/cpp/: CMakeLists.txt  TestDataLoader.cpp  TestDataLoader.h  backend_conv_test.cpp  cqt.cpp  data.py  fft.cpp  generate_references.py  ifft.cpp  irfft.cpp  rfft.cpp  test_data_utils.cpp  test_data_utils.h  test_references.txt  window.cpp
tests/cpp/backend/: accelerate.cpp  backend.cpp  onemkl.cpp  stub.cpp
tests/cpp/scripts/: _generate_utils.py  generate_cqt_data.py  generate_fft_data.py  generate_window_data.py
tests/cpp/tests/: cqt.cpp  fft.cpp  window.cpp
tests/python/: CMakeLists.txt  test_omnidsp.py
(+218 files in other folders)
